<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPda</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Text Input</string>
    <string name="title_section1list">Text List</string>
    <string name="title_section2">Analysis</string>
    <string name="title_section3">Processing</string>
    <string name="title_section4">DashBoard</string>
    
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="list">List</string>
    <string name="categorize">Categorize</string>
    <string name="back">Back</string>
    
</resources>
