<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
	android:id="@+id/fragmentLayout"
    >
	<LinearLayout
	    android:id="@+id/inputlayout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="15dp" 
	    >
    
		<EditText
	        android:id="@+id/txtInput"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
	        android:layout_weight="1"
	
	    android:inputType="textMultiLine"
	    android:lines="8"
	    android:gravity="top|left"
	    android:scrollbars="vertical"
	/>
		<Button
	        android:id="@+id/btnSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="inputSave"
	        android:text="@string/save" />
		<Button
	        android:id="@+id/btnDelete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="inputDelete"
	        android:text="@string/delete" />
		<Button
	        android:id="@+id/btnCategorize"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="inputCategorize"
	        android:text="@string/categorize" />
		<Button
	        android:id="@+id/btnList"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="inputList"
	        android:text="@string/list" />
	</LinearLayout>	
	
	<LinearLayout
	    android:id="@+id/listlayout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="15dp" 
	    android:visibility="gone"
	    >
		
	    <LinearLayout  
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            android:text="@string/search"
	            />
	        <EditText android:id="@+id/txtSearch"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:singleLine="true"
	            android:inputType="textAutoComplete"
	            android:layout_weight="1"
	            />
	
	<!--         <Button android:id="@+id/sort"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/search"
	            /> -->
	
	    </LinearLayout>
	    
		<ListView android:layout_width="match_parent"
		   android:layout_height="0dp"
		   android:layout_weight="1"
		   android:id="@+id/tasks_list_view"></ListView>
	
	</LinearLayout>	
				
</LinearLayout>
